# blefacade

./: .gitignore  CMakeLists.txt  Contributors  README.md
components/bluez/: CMakeLists.txt
components/bluez/data/: CMakeLists.txt  gatt-characteristic.xml  gatt-descriptor.xml  gatt-manager.xml  gatt-service.xml  le-advertisement.xml  le-advertising-manager.xml  object-manager.xml
components/bluez/include/: advertisement.hh  advertising_manager.hh  application.hh  application_manager.hh  bluez_object_manager.hh  byte_array.hh  characteristic.hh  dbus_manager.hh  descriptor.hh  flags.hh  service.hh  utils.hh
components/bluez/src/: advertisement.cc  advertising_manager.cc  application.cc  application_manager.cc  bluez_backend.cc  bluez_object_manager.cc  byte_array.cc  characteristic.cc  dbus_manager.cc  descriptor.cc  flags.cc  service.cc  utils.cc
components/core/: CMakeLists.txt
components/core/src/: att_utils.cc
components/core/tests/: CMakeLists.txt  config_assemble.cc  handling.cc
components/esp32/blefacade/: CMakeLists.txt  esp32_backend.cc  esp32_backend.hh
components/security/: CMakeLists.txt
components/security/src/: softsecurity.cc
components/security/tests/: CMakeLists.txt  softsecurity.cc
data/: Config.cmake.in
examples/bluez_gatt_server/: CMakeLists.txt  main.cc  service_declaration.cc
examples/bluez_softsecure_server/: CMakeLists.txt  main.cc  simple_softsec.hh
examples/esp32_gatt_server/: CMakeLists.txt  README.md
examples/esp32_gatt_server/components/ext_libs/: CMakeLists.txt
examples/esp32_gatt_server/main/: CMakeLists.txt  main.cc  service_declaration.cc
examples/esp32_softsecure_server/: CMakeLists.txt  sdkconfig
examples/esp32_softsecure_server/components/ext_libs/: CMakeLists.txt
examples/esp32_softsecure_server/main/: CMakeLists.txt  ble_service.cc  ble_service.hh  main.cc
include/blefacade/: version.hh.in
include/blefacade/bluez/: bluez_backend.hh
include/blefacade/core/GATT/: att_utils.hh  attribute.hh  characteristic.hh  descriptor.hh  handlers.hh  profile.hh  service.hh  uuid.hh  uuid_defs.hh
include/blefacade/core/backend/: ble_backend_if.hh
include/blefacade/core/utils/: bound_data.hh  slist.hh  test_utils.hh  utils.hh
include/blefacade/security/: softsecurity.hh
src/: version.cc
tools/cmake/: FindDBusCppChromium.cmake  SofteqComponentsModel.cmake
